# api_service

./: .env.example  Dockerfile  Makefile  README.md  example.json  fill_database.py  pyproject.toml
.github/workflows/: deploy.yaml
app/: config.py  main.py
app/storage/: database.py  exceptions.py  models.py  router.py  schemas.py  services.py  utils.py
docker_compose/: app.yaml  storage.yaml
