[tool.poetry]
name = "api-service"
version = "0.1.0"
description = "service for storing and processing data about site users"
authors = ["Jorique <guselnikovgeorgiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pymongo = {extras = ["srv"], version = "^4.7.3"}
pydantic-settings = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
